Учтены все правки, исправлена работа с DTO в контроллере

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,8 @@ spring.servlet.multipart.max-request-size=10MB
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+bucket.name = artist-photos
+endpoint = http://localhost:9000
+access.key = myaccesskey
+secret.key = mysecretkey
