--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,4 @@ bucket.name = artist-photos
 endpoint = http://localhost:9000
 access.key = myaccesskey
 secret.key = mysecretkey
+secret.jwt = secretKeyForJWTToken
