--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ endpoint = http://localhost:9000
 access.key = myaccesskey
 secret.key = mysecretkey
 secret.jwt = secretKeyForJWTToken
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
