--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,14 @@
       <artifactId>java-jwt</artifactId>
       <version>4.4.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-amqp -->
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-amqp</artifactId>
+      <version>3.4.0</version>
+    </dependency>
+
+
 
 
 
